fix(Avatar): Fix shadow z-index

--- a/src/components/Avatar/Avatar.css
+++ b/src/components/Avatar/Avatar.css
@@ -26,7 +26,7 @@
   height: 100%;
   box-shadow: inset 0 0 0 var(--thin-border) var(--image_border);
   pointer-events: none;
-  z-index: 3;
+  z-index: 2;
   border-radius: inherit;
 }
 
